apps/base/somen-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somen-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: somen-backend
  template:
    metadata:
      labels:
        app: somen-backend
    spec:
      containers:
        - name: somen-backend
          image: DAFFODIL.ad.slc.net:5000/slc/somen-back-end:latest
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 3000
