apps/base/somen-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: somen-backend-service
spec:
  type: ClusterIP
  selector:
    app: somen-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
