apps/base/somen-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: somen-api-httproute
spec:
  parentRefs:
  - name: traefik
    sectionName: web
    namespace: traefik
  hostnames:
  - somen-api.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
